@@ -13,6 +13,7 @@
  */
 
 #include <time.h>
+#include <gammu-error.h>
 #include <gammu-statemachine.h>
 
 /**
