@@ -25,6 +25,7 @@ ChangeLog
 [!] * SMSD now requires [gammu] section in config file.
 [+] * Added pkgconfig support for gsmsd (SMSD library).
 [+] * Debug logging can be handled by custom function in application.
+[+] * SMSD log now includes gammu log messages.
     
 20081219 - 1.22.1
 
